Fix article header on small screen

--- a/assets/style/_article.scss
+++ b/assets/style/_article.scss
@@ -1,7 +1,7 @@
 .article-title {
   margin-top: 1rem;
   margin-bottom: 3rem;
-  font-size: 6rem;
+  font-size: 6vw;
   line-height: 1;
 }
 
